old_tests/tests/lean/user_notation.lean.expected.out
2
0 + (1 + 0) + (1 + 1) + (1 + 2) + (1 + 3) + (1 + 4) + (1 + 5) + (1 + 6) + (1 + 7) + (1 + 8) + (1 + 9) : ℕ
user_notation.lean:22:9: error: invalid user-defined notation, must start with `interactive.parse (lean.parser.tk c)` parameter, optionally preceded by `interactive.parse lean.parser.pexpr` parameter
user_notation.lean:22:9: error: don't know how to synthesize placeholder
context:
e₁ : parse lean.parser.pexpr
⊢ Sort ?
user_notation.lean:25:9: error: invalid user-defined notation, must return type `lean.parser p`
user_notation.lean:25:9: error: don't know how to synthesize placeholder
context:
e₁ : parse (tk "(")
⊢ Sort ?
